--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "js-yaml": "^4.0.0",
-    "yaml-schema-validator": "^1.2.2"
+    "chalk": "^2.4.1",
+    "commander": "^2.16.0",
+    "js-yaml": "^3.12.0",
+    "validate": "^4.4.1"
   }
 }
