--- a/test/file-examples/bundle-descriptor-broken1.yaml
+++ b/test/file-examples/bundle-descriptor-broken1.yaml
@@ -19,7 +19,7 @@ components: # All components will be here
         - pageModels/another_page_model_descriptor.yaml
 
     # To create and publish pages you will need to add references to the descriptor file's
-    page:
+    pages:
         - page/my_page_descriptor.yaml
         - page/another_page_descriptor.yaml
 
